force-app/hfs-backend/main/default/objects/hfs_Course__c/hfs_Course__c.object-meta.xml
<CustomObject>
    <label>Course</label>
    <nameField>
        <label>Course Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>