force-app/hfs-backend/main/default/objects/hfs_Course__c/fields/hfs_Category__c.field-meta.xml
<CustomField>
    <fullName>hfs_Category__c</fullName>
    <description
  >Course category used for filtering the training grid.</description>
    <inlineHelpText>The category this course belongs to.</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Brand &amp; Standards</fullName>
            </value>
            <value>
                <fullName>Payment &amp; Loyalty</fullName>
            </value>
            <value>
                <fullName>Site Operations</fullName>
            </value>
            <value>
                <fullName>Fuel &amp; Products</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>