force-app/hfs-backend/main/default/objects/hfs_Course__c/fields/hfs_ContentUrl__c.field-meta.xml
<CustomField>
    <fullName>hfs_ContentUrl__c</fullName>
    <description
  >The Salesforce-hosted course content location that Start/Resume opens. When blank or unreachable, the action fails closed with a retry message rather than advancing status. Populated per course by admins (course authoring is out of scope).</description>
    <label>Content URL</label>
    <type>Url</type>
</CustomField>