force-app/hfs-backend/main/default/objects/hfs_Course__c/fields/hfs_Description__c.field-meta.xml
<CustomField>
    <fullName>hfs_Description__c</fullName>
    <description>Short course summary shown on the course card.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>