force-app/hfs-backend/main/default/objects/hfs_Course__c/fields/hfs_DueDate__c.field-meta.xml
<CustomField>
    <fullName>hfs_DueDate__c</fullName>
    <description>Deadline for courses that carry one.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>