force-app/hfs-backend/main/default/objects/hfs_Course__c/fields/hfs_DurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>hfs_DurationMinutes__c</fullName>
    <description
  >Course length in minutes; basis for estimated remaining time.</description>
    <label>Duration (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>