force-app/hfs-backend/main/default/objects/hfs_Course__c/fields/hfs_IsActive__c.field-meta.xml
<CustomField>
    <fullName>hfs_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Whether the course is available in the catalog. Retired courses set false.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>