force-app/hfs-backend/main/default/objects/hfs_Course__c/fields/hfs_IsNewRelease__c.field-meta.xml
<CustomField>
    <fullName>hfs_IsNewRelease__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Flags a newly released course; drives the NEW highlight banner.</description>
    <label>Is New Release</label>
    <type>Checkbox</type>
</CustomField>