force-app/hfs-backend/main/default/objects/hfs_Course__c/fields/hfs_ModuleCount__c.field-meta.xml
<CustomField>
    <fullName>hfs_ModuleCount__c</fullName>
    <description>Number of modules in the course.</description>
    <label>Module Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>