force-app/hfs-backend/main/default/objects/hfs_Course__c/fields/hfs_ReleasedDate__c.field-meta.xml
<CustomField>
    <fullName>hfs_ReleasedDate__c</fullName>
    <description>Release date shown on new-release courses.</description>
    <label>Released Date</label>
    <type>Date</type>
</CustomField>